--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,9 +1,9 @@
 {
   "lang": "zh",
   "start": "开始游戏",
-  "normal": "普通哥谭",
-  "endless": "一直焯",
-  "practice": "练习一下怎么焯",
+  "normal": "正常骂人",
+  "endless": "一直骂",
+  "practice": "练习一下怎么有礼貌的骂人",
   "settings": "游戏设置",
   "img-before": "点击前图",
   "img-after": "点击后图",
@@ -15,23 +15,23 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "哥谭噩梦",
+  "eat-kano": "定子哥骂人模拟器",
   "default-dfjk": "默认为DFJK",
-  "default-20s": "默认你只能焯20秒",
-  "game-title": "哥谭噩梦",
-  "game-intro1": "从最底下的小丑开始",
-  "game-intro2": "看你能焯多少下",
+  "default-20s": "默认你只能骂20秒",
+  "game-title": "定子哥骂人模拟器",
+  "game-intro1": "从最底下开始骂",
+  "game-intro2": "看你能骂多少下",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
-  "time-up": "你焯不动了",
-  "calculating": "伤心ing",
+  "time-up": "口干舌燥，你骂不动了",
+  "calculating": "思考ing",
   "score": "得分",
   "best": "最佳",
   "again": "重来",
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着再成为他们的噩梦?",
+  "text-level-1": "再体验一下?",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
   "text-level-4": "您",
@@ -43,7 +43,7 @@
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "焯-排行榜",
+  "navbar-brand": "nm-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
